<resources>
    <string name="app_name">Dont_Forget_To_Drink</string>
    <string name="titleAppName">Don\'t Forget To Drink</string>
    <string name="changeCupSize">Change cup size</string>
    <string name="alreadyDrank">0/0 ml</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="WelcomeTitle">Welcome to this App :)</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="choose_gender">Choose gender</string>
    <string name="weightChooseTextView">Your Weight [kg]:</string>
    <string name="ageUser">Age:</string>
    <string name="wakeUpTime">Wake up time:</string>
    <string name="sleepTime">Sleep time:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mediumCupSize">medium cup size</string>
    <string name="largeCupSize">large cup size</string>
    <string name="littleCupSize">little cup size</string>
    <string name="confirmWaterDrank">Confirm for drank water</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="editProfile">Edit Profile</string>
    <string name="deleteProfile">Delete profile</string>
    <string name="scrollDown">Scroll down</string>
    <string name="DailyWater">Daily amount of water:</string>
    <string name="confirmEditProfile">Confirm changes</string>
    <string name="insertYourInfo">Please, tell us a little about yourself.</string>
    <string name="confirmMyInformation">Confirm my information.</string>
    <string name="surnameExample">Johnnson</string>
    <string name="nameExample">Mark</string>
    <string name="congratulationsGif">Congratulations</string>
</resources>