<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change your cup size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="120dp">

            <ImageButton
                android:id="@+id/littleCupSizeImgBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/little_cup"
                android:contentDescription="@string/littleCupSize"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="120dp">

            <ImageButton
                android:id="@+id/mediumCupSizeImgBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/medium_cup"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/mediumCupSize"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="120dp">
            <ImageButton
                android:id="@+id/largeCupSizeImgBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/large_cup"
                android:scaleType="centerInside"
                android:padding="5dp"
                android:contentDescription="@string/largeCupSize"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/usersOwnCupSizeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Your own cup size"
        android:textColorHint="@color/LightGrey"
        android:singleLine="true"
        android:textSize="23dp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:maxLength="4"/>

    <Button
        android:id="@+id/ownCupSizeConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="@color/Black"
        android:text="- Change the size - "
        android:textColor="@color/AliceBlue" />

</LinearLayout>